[gd_scene load_steps=2 format=3 uid="uid://ch2v0xoup0w8x"]

[ext_resource type="Script" path="res://JunkYard/body.gd" id="1_phna7"]

[node name="body" type="Area2D"]
collision_layer = 2
script = ExtResource("1_phna7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
